# TalentMatchAI

./: README.md
hiring_automation/: README.md  pyproject.toml
hiring_automation/src/hiring_automation/: crew.py  main.py
hiring_automation/src/hiring_automation/config/: agents.yaml  tasks.yaml
hiring_automation/src/hiring_automation/tools/: googledocs_tool.py  pdf_reader.py  spreadsheet_tool.py
