[project]
name = "hiring_automation"
version = "0.1.0"
description = "hiring_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
hiring_automation = "hiring_automation.main:run"
run_crew = "hiring_automation.main:run"
train = "hiring_automation.main:train"
replay = "hiring_automation.main:replay"
test = "hiring_automation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
